<resources>
    <string name="app_name">DincomApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DincomApp</string>
    <string name="nav_header_subtitle">dincomapp@dincomapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="plates">Platos</string>
    <string name="profile">Perfil</string>
    <string name="configurations">Configuraciones</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="about">Acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Comidas">Comidas</string>
    <string name="bebidas">Bebidas</string>
    <string name="title_activity_navigation_drawer">activity_navigation_drawer</string>
    <string name="nombre">Nombre</string>
    <string name="manana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="precio">Precio</string>
    <string name="noche">Noche</string>
    <string name="entrada">Entrada</string>
    <string name="plato_fuerte">Plato Fuerte</string>
    <string name="ingrese_los_ingredientes">Ingrese los ingredientes</string>
    <string name="ingreComidas">Ingredientes:</string>
    <string name="ingreBebidas">Ingredientes:</string>
    <string name="maniana">Mañana</string>
    <string name="tipo_comida">Tipo Comida:</string>
    <string name="horario">Horario:</string>
    <string name="precio_comida">Precio $</string>
    <string name="precio_bebida">Precio $</string>
    <string name="tiempo_preparacion">Tiempo Preparación</string>
    <string name="nombre_bebida">Nombre</string>
    <string name="informacion_ingresada">Información Ingresada</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="registrar">Registrar</string>
    <string name="limpiar">Limpiar</string>
    <string name="exit">Salir</string>
    <string name="title_activity_comidas2">activity_comidas2</string>
    <string name="dincom">DincomApp</string>
    <string name="computacion_movil">Computación Móvil</string>
    <string name="infoDincom">Con muchos Términos de Computación, Informática e Ingeniería y una gran variedad de video tutoriales, este Diccionario Ingenieril define todos los términos técnicos desde el nivel elemental hasta el profesional. No es un diccionario informático ordinario, contiene la Historia de la computadora y mucha evolución como característica de la línea de tiempo.</string>
    <string name="register">Registrarse</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="load_image">Seleccionar Imagen</string>
    <string name="description">Descripción</string>
    <string name="init">Inicio</string>
    <string name="agregar">Agregar</string>
    <string name="detail_plate">Detalle del Plato</string>
    <string name="nombre_del_plato">Nombre del Plato:</string>
    <string name="detalle_tutorial">Video Tutorial</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="tutorials">Tutoriales</string>
    <string name="list_terms">Listado de Términos</string>
    <string name="list_tutorials">Listado de Tutoriales</string>
    <string name="exit_app">Salir de la Aplicación</string>
    <string name="search">Búsqueda</string>
    <string name="buscar">Buscar</string>
    <string name="busqueda">Busqueda</string>
    <string name="definition">Definición</string>
    <string name="term">Término</string>
    <string name="id_term">Id Term</string>
    <string name="tutorial">Tutorial</string>
    <string name="detail_term">Detalle del Término</string>


    <!-- Strings for table terminos -->

    <string name="term001">(en inglés significa "at" [en]). En las direcciones de e-mail, es el símbolo que separa el nombre del usuario del nombre de su proveedor de correo electrónico. Por ejemplo: pepe@hotmail.com</string>
    <string name="term002">Tridimensional. Imagen construida con tres dimensiones: largo, ancho y profundidad. Cuando el usuario puede interactuar con imágenes 3D sintiéndose involucrado en la escena, la experiencia se llama realidad virtual.</string>
    <string name="term003"></string>
    <string name="term004"></string>
    <string name="term005"></string>
    <string name="want_exit">¿Realmente desea salir de la aplicación?</string>
    <string name="can_search">Puede ingresar una palabra o parte de ella para realizar la búsqueda</string>
    <string name="result_search">Resultado de Busqueda</string>
    <string name="video">Video</string>
    <string name="search_terms">Buscar términos</string>
    <string name="search_tutorial">Buscar tutoriales</string>
    <string name="title_activity_maps">Map</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="come_back">Regresar</string>

</resources>
