<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailtermFragment">

    <TextView
        android:id="@+id/id_head_def"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:background="@color/colorPrimary"
        android:text="@string/definition"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="2dp" />

    <TextView
        android:id="@+id/id_term"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/term"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/id_head_def"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/id_definition"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/definition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_term" />

    <TextView
        android:id="@+id/id_linktutorial"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_definition" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/img_definition"
        app:layout_constraintEnd_toEndOf="@+id/id_head_def"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>